--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="description">Développeur Web & Java • Campus Charles de Foucauld</p>
             <div class="hero-cta">
                 <a href="#projets" class="btn btn-primary">Voir mes projets</a>
-                <button onclick="openPdf('doc/cv.pdf')" class="btn btn-secondary">📄 Voir mon CV </button>
+                <button onclick="openPdf('Doc/cv.pdf')" class="btn btn-secondary">📄 Voir mon CV </button>
             </div>
         </div>
     </section>
