Update navigation links and fix PDF paths in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#competences">Compétences</a></li>
             <li><a href="#cv">CV</a></li>
             <li><a href="#projets">Projets</a></li>
-            <li><a href="#veille">Veille</a></li> 
+            <li><a href="veille.html">Veille</a></li> 
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -68,7 +68,7 @@
             <p style="color: #cbd5e1; margin-bottom: 2rem;">
                 Vous pouvez consulter l'intégralité de mon tableau de synthèse des compétences validées ci-dessous.
             </p>
-            <button onclick="openPdf('doc/tableau.pdf')" class="btn btn-pdf">📄 Voir le Tableau Officiel </button>
+            <button onclick="openPdf('Doc/tableau.pdf')" class="btn btn-pdf">📄 Voir le Tableau Officiel </button>
         </div>
     </section>
 
@@ -98,7 +98,7 @@
                         <p>• Handball en club (6 ans, niveau régional)</p>
                     </div>
                     
-                    <button onclick="openPdf('doc/cv.pdf')" class="btn btn-pdf" style="width: 100%;">📄 Prévisualiser CV</button>
+                    <button onclick="openPdf('Doc/cv.pdf')" class="btn btn-pdf" style="width: 100%;">📄 Prévisualiser CV</button>
 
                 </div>
 
@@ -174,7 +174,7 @@
                     <span class="tag">MySQL</span>
                     <span class="tag">MVC</span>
                 </div>
-                <a href="#" class="project-link">Voir la documentation PDF →</a>
+                <a href="#" class="project-link">Voir la documentation PDF 📄 →</a>
             </div>
 
             <div class="project-card">
@@ -240,7 +240,7 @@
             }
         }
 
-        // ============ CANVAS PARTICLES et SCROLL LOGIC (Inchangé) ============
+        // ============ CANVAS PARTICLES et SCROLL LOGIC ============
         const canvas = document.getElementById('particlesCanvas');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
