--- a/cnav_doc.html
+++ b/cnav_doc.html
@@ -153,7 +153,7 @@
                 L'objectif était de monter en compétence sur le développement web backend avec le framework Microsoft.
                 J'ai travaillé sur le projet <strong>"Projet modèle MVC Core"</strong>, une application de gestion de base de données cinématographique.
             </p>
-            <img src="images/accueil.png" alt="Page d'accueil du projet" class="doc-image" onclick="openImage(this)">
+            <img src="images/Accueil.png" alt="Page d'accueil du projet" class="doc-image" onclick="openImage(this)">
         </div>
 
         <div class="doc-section" id="architecture">
