Replace CV preview button with a link to open CV in a new tab

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                         <p>• Jeux vidéo</p>
                         <p>• Handball en club (6 ans, niveau régional)</p>
                     </div>
-                    
-                    <button onclick="openPdf('Doc/cv.pdf')" class="btn btn-pdf" style="width: 100%;">📄 Prévisualiser CV</button>
-
+                    <div class="bouton" style="width: 100%; margin-top: 1rem;">
+                        <a href="Doc/cv.pdf" target="_blank" class="btn btn-pdf" style="display: block; width: 100%; text-align: center; text-decoration: none;">
+                            📄 Ouvrir mon CV
+                         </a>
+                    </div>
                 </div>
 
                 <div class="cv-main">
