Fix image file names in documentation for consistency

--- a/cnav_doc.html
+++ b/cnav_doc.html
@@ -166,12 +166,12 @@
                 <div>
                     <h3>Structure BDD (SQL Server)</h3>
                     <p>Voici la table <code>Films</code> générée après la migration.</p>
-                    <img src="images/bd.png" alt="Structure SQL" class="doc-image" onclick="openImage(this)">
+                    <img src="images/BD.png" alt="Structure SQL" class="doc-image" onclick="openImage(this)">
                 </div>
                 <div>
                     <h3>Contexte de Données (DbContext)</h3>
                     <p>Configuration des relations (One-to-Many) dans le <code>MvcCoreContexte.cs</code>.</p>
-                    <img src="images/db-core-contexte.png" alt="Code DbContext" class="doc-image" onclick="openImage(this)">
+                    <img src="images/DB-Core-Contexte.png" alt="Code DbContext" class="doc-image" onclick="openImage(this)">
                 </div>
             </div>
 
@@ -198,7 +198,7 @@
 
             <h3>2. Le Contrôleur (FilmsController)</h3>
             <p>Le contrôleur orchestre tout : il reçoit la requête HTTP, appelle le Service pour avoir les données, et retourne la Vue correspondante.</p>
-            <img src="images/controller-film.png" alt="Code Controller" class="doc-image" onclick="openImage(this)">
+            <img src="images/Controller-Film.png" alt="Code Controller" class="doc-image" onclick="openImage(this)">
 
             <h3>3. Les Vues (Razor .cshtml) et le Résultat</h3>
             
@@ -208,11 +208,11 @@
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
                         <div>
                             <p class="code-title">Code : Views/Films/Index.cshtml</p>
-                            <img src="images/vue-index-film.png" alt="Code Vue Index" class="doc-image" onclick="openImage(this)">
+                            <img src="images/Vue-Index-film.png" alt="Code Vue Index" class="doc-image" onclick="openImage(this)">
                         </div>
                         <div>
                             <p class="code-title">Résultat Navigateur</p>
-                            <img src="images/films.png" alt="Rendu Index" class="doc-image" onclick="openImage(this)">
+                            <img src="images/Films.png" alt="Rendu Index" class="doc-image" onclick="openImage(this)">
                         </div>
                     </div>
                 </div>
@@ -223,8 +223,8 @@
                 <div class="details-content">
                     <p>Intégration des listes déroulantes pour les Genres et Réalisateurs.</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                        <img src="images/vue-create-film.png" alt="Code Vue Create" class="doc-image" onclick="openImage(this)">
-                        <img src="images/create-film.png" alt="Rendu Create" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Vue-Create-film.png" alt="Code Vue Create" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Create-film.png" alt="Rendu Create" class="doc-image" onclick="openImage(this)">
                     </div>
                 </div>
             </details>
@@ -233,7 +233,7 @@
                 <summary>✏️ Vue Edit (Modification)</summary>
                 <div class="details-content">
                     <p>Affichage des cinémas via une boucle <code>foreach</code>.</p>
-                    <img src="images/vue-edit-film.png" alt="Code Vue Edit" class="doc-image" onclick="openImage(this)">
+                    <img src="images/Vue-Edit-film.png" alt="Code Vue Edit" class="doc-image" onclick="openImage(this)">
                 </div>
             </details>
 
@@ -241,8 +241,8 @@
                 <summary>🔍 Vue Details (Affichage complet)</summary>
                 <div class="details-content">
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                        <img src="images/vue-details-film.png" alt="Code Vue Details" class="doc-image" onclick="openImage(this)">
-                        <img src="images/detail-films.png" alt="Rendu Details" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Vue-Details-film.png" alt="Code Vue Details" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Detail-films.png" alt="Rendu Details" class="doc-image" onclick="openImage(this)">
                     </div>
                 </div>
             </details>
@@ -252,8 +252,8 @@
                 <div class="details-content">
                     <p>Message d'avertissement avant suppression définitive.</p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                        <img src="images/vue-delete-film.png" alt="Code Vue Delete" class="doc-image" onclick="openImage(this)">
-                        <img src="images/del-film.png" alt="Rendu Delete" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Vue-Delete-film.png" alt="Code Vue Delete" class="doc-image" onclick="openImage(this)">
+                        <img src="images/Del-film.png" alt="Rendu Delete" class="doc-image" onclick="openImage(this)">
                     </div>
                 </div>
             </details>
@@ -268,16 +268,16 @@
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
                 <div>
                     <p><strong>Liste des Séances :</strong></p>
-                    <img src="images/seances.png" alt="Liste séances" class="doc-image" onclick="openImage(this)">
+                    <img src="images/Seances.png" alt="Liste séances" class="doc-image" onclick="openImage(this)">
                 </div>
                 <div>
                     <p><strong>Modification d'une Séance :</strong></p>
-                    <img src="images/edit-seances.png" alt="Edit séance" class="doc-image" onclick="openImage(this)">
+                    <img src="images/Edit-seances.png" alt="Edit séance" class="doc-image" onclick="openImage(this)">
                 </div>
             </div>
             
             <p style="margin-top: 1rem;"><strong>Suppression sécurisée :</strong></p>
-            <img src="images/del-seances.png" alt="Suppression Séance" class="doc-image" style="max-width: 80%; display: block; margin: 0 auto;" onclick="openImage(this)">
+            <img src="images/Del-seances.png" alt="Suppression Séance" class="doc-image" style="max-width: 80%; display: block; margin: 0 auto;" onclick="openImage(this)">
         </div>
 
         <div class="doc-section" style="border-left-color: var(--primary);">
