Fix PDF link path and update navigation link for consistency

--- a/cnav_doc.html
+++ b/cnav_doc.html
@@ -288,7 +288,7 @@
                 <li><strong>Frontend :</strong> Razor, HTML5, Bootstrap.</li>
                 <li><strong>Database :</strong> SQL Server, Migrations.</li>
             </ul>
-            <a href="doc/tableau.pdf" class="btn btn-pdf" style="margin-top: 2rem;">Télécharger le Tableau de Synthèse Officiel 📄</a>
+            <a href="Doc/tableau.pdf" class="btn btn-pdf" style="margin-top: 2rem;">Télécharger le Tableau de Synthèse Officiel 📄</a>
         </div>
 
     </div>
