--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#competences">Compétences</a></li>
             <li><a href="#cv">CV</a></li>
             <li><a href="#projets">Projets</a></li>
-            <li><a href="veille.html">Veille</a></li> 
+            <li><a href="#veille">Veille</a></li> 
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
