Update address format in contact section for clarity

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h3 style="color: white; margin-bottom: 1rem;">📧 Contact</h3>
                         <p><strong>Tel:</strong> 06 15 02 13 52</p>
                         <p><strong>Email:</strong> moualfi.milhane@gmail.com</p>
-                        <p><strong>Adresse:</strong> 21 rue Eugène Berthoud, 93400 Saint-Ouen sur Seine</p>
+                        <p><strong>Adresse:</strong> 93400 Saint-Ouen sur Seine</p>
                         <p><strong>Né le:</strong> 05/04/2006</p>
                     </div>
 
